2011-01-04  Frank Kober  <goemusic@yahoo.fr>
	* configure.ac: broken Qt lib checks disabled atm, changed version
	number to 0.3.9
	* man/*: update SUPPORT mailing address
	
2010-12-09  Frank Kober  <goemusic@yahoo.fr>
	* arpwidget.cpp: fixed combobox updates 'repeat mode and trig mode)
	* seqdriver.*: fixed get_time() function that led to glitches in
	trig mode
	* midiarp.cpp: fixed legato in trig mode
	
2010-12-05  Frank Kober  <goemusic@yahoo.fr>
	* arpscreen.*, midiarp.*: handling of follower position improved
	* midiarp.*, seqdriver.*: trigger-by-note-on capability added. 
	There are now (finally) three trigger modes:
		o No trigger: the original continuous mode
		o Kbd restart: pattern position is reset upon stakato note-on
		o Kbd trigger: arp is retriggered upon stakato note-on time.
		  Absence of this mode has probably confused some users about
		  the general function of the arpeggiator.
	* arpwidget.*: combobox added for trigger mode choice.
	* man/*: manpages updated
	
2010-11-27  Frank Kober  <goemusic@yahoo.fr>
	* arpwidget.*, midiarp.*: new latch mode implemented. When latch 
	button is checked, released notes are removed only after 200ms. If 
	within this period all notes are released, the note buffer is 
	latched. It gets unlatched when pressing the footswitch or 
	unchecking the latch button.
	* arpscreen.cpp, seqdriver.*, mainwindow.cpp, midiarp.*: follower 
	line now governed by midiarp.
	
2010-11-13  Frank Kober  <goemusic@yahoo.fr>
	* lfowidget.*: copyToCustom button removed, copying is done upon
	first leftclick on lfoscreen. WaveFormBox and Frequency get MIDI 
	learn.
	* arpwidget.*: random and envelope boxes made checkable. Controls
	hidden by default.
	* mainwindow.cpp, arpwidget.cpp: keyboard shortcuts made unique
	* seqwidget.cpp: note and velocity input made independent again
	* *screen.*: gray background when muted
	* *widget.*, midi*.*, mainwindow.cpp: some members renamed, consistency

2010-11-11  Frank Kober  <goemusic@yahoo.fr>