@@ -17,11 +17,13 @@
 #include "groovewidget.h"
 #include "config.h"
 
-static const char ABOUTMSG[] = APP_NAME " " PACKAGE_VERSION "\n"
-                          "(C) 2002-2003 Matthias Nagorni (SuSE AG Nuremberg)\n"
-              "(C) 2009 Frank Kober\n"
-              "(C) 2009 Guido Scholz\n\n"
-                          APP_NAME " is licensed under the GPL.\n";
+static const char ABOUTMSG[] = "<html> <p><b><big>" APP_NAME " " PACKAGE_VERSION "</big></b></p>"
+                          "<p>(C) 2002-2003 Matthias Nagorni (SuSE AG Nuremberg)<br/>"
+              "(C) 2009-2011 Frank Kober<br/>"
+              "(C) 2009 Guido Scholz</br></p>"
+              "<p>For getting support please type <b>man qmidiarp</b> or go to<br/>"
+              "<a href=&quot;http://sourceforge.net/projects/qmidiarp&quot;>http://sourceforge.net/projects/qmidiarp</a></p>"
+                          APP_NAME " is licensed under the GPL.</b></p></html>";
 
 class MainWindow : public QMainWindow
 {
